@@ -239,15 +239,15 @@ class ApiEditPage extends ApiBase {
 		$ep->setContextTitle( $titleObj );
 		$ep->importFormData( $req );
 
-		// Run hooks
-		// Handle CAPTCHA parameters
-		if ( !is_null( $params['captchaid'] ) ) {
+		if ( isset( $params['captchaid'] ) && !is_null( $params['captchaid'] ) ) {
 			$wgRequest->setVal( 'wpCaptchaId', $params['captchaid'] );
 		}
-		if ( !is_null( $params['captchaword'] ) ) {
+		if ( isset( $params['captchaword'] ) && !is_null( $params['captchaword'] ) ) {
 			$wgRequest->setVal( 'wpCaptchaWord', $params['captchaword'] );
 		}
 
+		// Run hooks
+		// Handle APIEditBeforeSave parameters
 		$r = array();
 		if ( !wfRunHooks( 'APIEditBeforeSave', array( $ep, $ep->textbox1, &$r ) ) ) {
 			if ( count( $r ) ) {
@@ -422,8 +422,6 @@ class ApiEditPage extends ApiBase {
 			'recreate' => false,
 			'createonly' => false,
 			'nocreate' => false,
-			'captchaword' => null,
-			'captchaid' => null,
 			'watch' => array(
 				ApiBase::PARAM_DFLT => false,
 				ApiBase::PARAM_DEPRECATED => true,
@@ -482,8 +480,6 @@ class ApiEditPage extends ApiBase {
 			'watch' => 'Add the page to your watchlist',
 			'unwatch' => 'Remove the page from your watchlist',
 			'watchlist' => 'Unconditionally add or remove the page from your watchlist, use preferences or do not change watch',
-			'captchaid' => 'CAPTCHA ID from previous request',
-			'captchaword' => 'Answer to the CAPTCHA',
 			'md5' => array(	"The MD5 hash of the {$p}text parameter, or the {$p}prependtext and {$p}appendtext parameters concatenated.",
 					'If set, the edit won\'t be done unless the hash is correct' ),
 			'prependtext' => "Add this text to the beginning of the page. Overrides {$p}text",
